# SRE-Bench

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  dashboard.html  environment.py  graders.py  hf_upload_error_final_final.txt  hf_upload_error_final_final_final.txt  hf_upload_error_revert.txt  inference.py  inference_output.txt  main.py  openenv.yaml  pyproject.toml  requirements.txt  state_manager.py  test_agent.py  upload_hf.py  uv_error.txt  uv_error_2.txt  uv_error_3.txt
server/: app.py
server/tasks/: __init__.py  task_data_corruption.py  task_db_pool.py  task_disk_full.py
tasks/: __init__.py  task_data_corruption.py  task_db_pool.py  task_disk_full.py
